# Persica

./: .pre-commit-config.yaml  README.md  README_ZH.md  pyproject.toml
.github/workflows/: publish.yml
persica/: application.py  applicationbuilder.py  error.py
persica/context/: application.py  config.py  scanner.py
persica/factory/: abstract.py  component.py  definition.py  interface.py  registry.py
persica/scanner/: definition.py  graph.py  path.py  visitor.py
persica/utils/: logging.py
tests/: conftest.py
tests/context/: test_application.py
tests/factory/: test_factory.py
tests/scanner/: test_graph.py  test_path.py  test_visitor.py
tests/test_package/: module_a.py
tests/test_package/subpackage/: module_b.py
